# pointcloud_crop_box

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: run-unit-tests.yaml
config/: pointcloud2_box_filter_params.yaml
include/pointcloud2_box_filter/: pointcloud2_box_filter.hpp
launch/: pointcloud2_box_filter_launch.py
pointcloud_boxcrop/: CMakeLists.txt  package.xml
pointcloud_boxcrop/config/: pointcloud_boxcrop_params.yaml
pointcloud_boxcrop/include/pointcloud_boxcrop/: pointcloud_boxcrop.hpp  pointcloud_boxcrop_node.hpp
pointcloud_boxcrop/launch/: pointcloud_boxcrop_launch.py
pointcloud_boxcrop/src/: main.cpp  pointcloud_boxcrop.cpp  pointcloud_boxcrop_node.cpp  pointcloud_boxcrop_params.yaml
pointcloud_crop_box/: CMakeLists.txt  package.xml
pointcloud_crop_box/config/: pointcloud_boxcrop_params.yaml  pointcloud_crop_box_params.yaml
pointcloud_crop_box/include/pointcloud_crop_box/: pointcloud_crop_box_node.hpp
pointcloud_crop_box/src/: main.cpp  pointcloud_crop_box_node.cpp  pointcloud_crop_box_params.yaml
src/: pointcloud2_box_filter.cpp  pointcloud2_box_filter_node.cpp  pointcloud2_box_filter_params.yaml
